--- a/app/src/css/quasar.variables.scss
+++ b/app/src/css/quasar.variables.scss
@@ -19,11 +19,20 @@
 //   font-size: $body-font-size;
 // }
 
-$primary   : rgb(255, 102, 0);
+// primary: #22b3b3,
+//   /* #036564, */ secondary: #cdb380,
+//   tertiary: #033649,
+//   danger: #ea1616,
+//   /* #f53d3d, */ approve: #5bf43d,
+//   light: #e8ddcb,
+//   dark: #031634,
+//   seethrough: rgb(18, 44, 52),
 
-$secondary : #008bc2;
+$primary   : #22b3b3; // rgb(255, 102, 0);
 
-$dark      : #393e46;
+$secondary : #cdb380; // #008bc2;
+
+$dark      : #031634; // #393e46;
 
 $background: #222831;
 
